<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_13sdp"
        android:paddingTop="@dimen/_20sdp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_black"
            android:text="@string/local"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_all_songs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/local_songs"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <ImageView
                android:id="@+id/iv_refresh"
                android:layout_width="@dimen/_17sdp"
                android:layout_height="@dimen/_17sdp"
                android:src="@drawable/ic_refresh" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_songs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <Button
                android:id="@+id/btn_grant_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/grant_permission" />

            <TextView
                android:id="@+id/tvNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/nunito_semibold"
                android:text="No songs found"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </RelativeLayout>

    </LinearLayout>
</layout>