<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <fragment
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:defaultNavHost="true"
            app:navGraph="@navigation/main_nav_graph" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_tab_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_13sdp">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_tab_home_active" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/home"
                    android:textColor="@color/color_3C67FF"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tab_favourite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_13sdp">

                <ImageView
                    android:id="@+id/iv_favourite"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_tab_favourite_inactive" />

                <TextView
                    android:id="@+id/tv_favourite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/favorite"
                    android:textColor="@color/color_787B82"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tab_local"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_13sdp">

                <ImageView
                    android:id="@+id/iv_local"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_tab_local_inactive" />

                <TextView
                    android:id="@+id/tv_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/local"
                    android:textColor="@color/color_787B82"
                    android:textSize="@dimen/_10ssp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>