<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_13sdp"
        android:paddingVertical="@dimen/_10sdp">

        <ImageView
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_3sdp"
            android:background="@drawable/bg_handler_bottomsheet" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_13sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view"
                android:layout_width="@dimen/_47sdp"
                android:layout_height="@dimen/_47sdp"
                app:cardBackgroundColor="#989BA5"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <ImageView
                    android:id="@+id/iv_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_song_thumbnail" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_bold"
                    android:text="Draft"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/tv_artist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_medium"
                        android:text="Artist"
                        android:textColor="#5D6168"
                        android:textSize="@dimen/_10ssp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginBottom="@dimen/_13sdp"
            android:background="#80ACB0BA" />

        <LinearLayout
            android:id="@+id/ll_add_to_favourite_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_add_to" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/add_to_favourite_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_delete_from_favourite_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_add_to" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/delete_from_favourite_list"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

    </LinearLayout>
</layout>